--- a/GEngine.vcxproj
+++ b/GEngine.vcxproj
@@ -18,10 +18,38 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="Color4f.h" />
+    <ClInclude Include="Constans.h" />
+    <ClInclude Include="ConstantVelocity.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="FileReader.h" />
+    <ClInclude Include="GEngine.h" />
+    <ClInclude Include="gmath.h" />
+    <ClInclude Include="MassConnectedWithSpring.h" />
+    <ClInclude Include="Matrix3.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="MotionUnderGravitation.h" />
+    <ClInclude Include="Quaternion.h" />
+    <ClInclude Include="Render.h" />
+    <ClInclude Include="RenderGL.h" />
+    <ClInclude Include="Ship.h" />
+    <ClInclude Include="Simulation.h" />
+    <ClInclude Include="Tera.h" />
+    <ClInclude Include="Vector3f.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="FileReader.cpp" />
+    <ClCompile Include="GEngine.cpp" />
+    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="RenderGL.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CEDA5BDE-9584-4030-B7A4-C5F56D073693}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>GEngine</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -38,7 +66,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -107,6 +135,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <Lib>
+      <OutputFile>GEngine.lib</OutputFile>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -134,6 +165,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -142,35 +174,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="FileReader.cpp" />
-    <ClCompile Include="GEngine.cpp" />
-    <ClCompile Include="Model.cpp" />
-    <ClCompile Include="RenderGL.cpp">
-      <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Level4</WarningLevel>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="Color4f.h" />
-    <ClInclude Include="Constans.h" />
-    <ClInclude Include="ConstantVelocity.h" />
-    <ClInclude Include="FileReader.h" />
-    <ClInclude Include="math.h" />
-    <ClInclude Include="Entity.h" />
-    <ClInclude Include="GEngine.h" />
-    <ClInclude Include="MassConnectedWithSpring.h" />
-    <ClInclude Include="Matrix3.h" />
-    <ClInclude Include="Model.h" />
-    <ClInclude Include="MotionUnderGravitation.h" />
-    <ClInclude Include="Quaternion.h" />
-    <ClInclude Include="Render.h" />
-    <ClInclude Include="RenderGL.h" />
-    <ClInclude Include="Ship.h" />
-    <ClInclude Include="Simulation.h" />
-    <ClInclude Include="Tera.h" />
-    <ClInclude Include="Vector3f.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
